<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1"
            android:layout_marginTop="80dp"
            android:layout_marginStart="140dp"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-190dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/mailid"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-215dp"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:hint="@string/entpass"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/showHideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:text="@string/show"/>

        <Button
            android:id="@+id/showHideBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-225dp"
            android:layout_marginTop="420dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
