<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h2"
            android:layout_marginTop="80dp"
            android:layout_marginStart="140dp"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-190dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/mailid"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-220dp"
            android:layout_marginTop="290dp"
            android:ems="10"
            android:hint="@string/crpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/showHideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="290dp"
            android:text="@string/show"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-315dp"
            android:layout_marginTop="385dp"
            android:ems="10"
            android:hint="@string/confpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/showHideBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="385dp"
            android:text="@string/show"
            android:textSize="12sp" />

        <Button
            android:id="@+id/showHideBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-255dp"
            android:layout_marginTop="520dp"
            android:backgroundTint="@color/white"
            android:text="@string/crtacc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
