<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4AD3CA9F">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="130dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="150dp"
        android:background="#0000FF"
        android:text="@string/greet"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginStart="-280dp"
        android:text="@string/ask"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"

        />

    <Button
        android:id="@+id/login"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="290dp"
        android:layout_marginStart="-250dp"
        android:textSize="10sp"
        android:text="@string/yes" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginStart="-70dp"
        android:text="@string/then"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"

        />
    <Button
        android:id="@+id/up"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="380dp"
        android:layout_marginStart="-250dp"
        android:textSize="10sp"
        android:text="@string/no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="600dp"
        android:background="@color/material_dynamic_neutral30"
        android:text="@string/thanks"
        android:textColor="@color/white"

        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="550dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="550dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="550dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

</LinearLayout>